examples/test/testpolicy14066.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14066
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key8: value18
      key19: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value43
          key44: value15
          key34: value20
      podSelector:
        matchLabels:
          key40: value27
          key13: value31
          key14: value39
